<resources>
    <!--    ARE YOU SURE DIALOGS-->
    <string name="are_you_sure_delete">Are you sure you want to delete this task?</string>
    <!--    ERRORS-->
    <string name="error_retrieving_task_from_bundle">Unable to retrieving selected task</string>
    <string name="change_sort_bottom_sheet_error">"Please select at least one sort and order"</string>
    <string name="login_error">
                unable to login into firebase \n
                make sure your device have internet access \n
                If you live in Iran make sure you are using VPN, because this app use firebase service
    </string>
    <!--    OTHERS-->
    <string name="app_name">Clean ToDo</string>
    <string name="enter_title">Enter a title</string>
    <string name="ok">OK</string>
    <string name="undo">Undo</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="delete_task">Delete task</string>
    <string name="search">Search</string>
    <string name="sort_order">Sort and order</string>
    <string name="search_hint">Search…</string>
    <string name="task_details">Task Details</string>
    <string name="sort_name">Task name</string>
    <string name="sort_creation_date">Task creation date</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_name_or_date">Sort by name or date?</string>
    <string name="ascending_or_descending_order">Ascending or descending order</string>
    <string name="order_ACS">Ascending</string>
    <string name="order_DECS">Descending</string>
    <string name="apply">Apply</string>
    <string name="Exit">Exit</string>
    <string name="try_again">Try again</string>
    <string name="newer_to_older_or_older_to_newer">Order by newer to older or older to newer</string>
    <string name="newer_to_older">Newer to older</string>
    <string name="older_to_newer">Older to newer</string>
    <string name="a_to_z_or_z_to_a">Order by A to Z or Z to A</string>
    <string name="a_to_z">A to Z</string>
    <string name="z_to_a">Z to A</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password_question">forgot password?</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="back_to_login">Back to login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="passwords_does_not_match">The confirm password confirmation does not match.</string>
    <string name="welcome_n_back">Welcome \nBack</string>
    <string name="create_account">Create \nAccount</string>
    <string name="reset_password">Reset \nPassword</string>


</resources>