<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".framework.presentation.auth.login.LogInFragment">

    <EditText
        android:id="@+id/login_email_edt"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/login_password_edt"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/login_forgotPassword_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center"

        android:layout_marginTop="16dp"
        android:gravity="end|center"
        android:text="@string/forgot_password_question" />

    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/don_t_have_an_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="?colorPrimary" />
    </LinearLayout>

</LinearLayout>