<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/bottom_sheet_dismiss_btn"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_close_24"
            android:tint="@color/black" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:gravity="center|start"
            android:text="@string/sort_by"
            android:textColor="#000"
            android:textSize="22sp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/filter_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_name_or_date"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/sort_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sort_name"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/sort_create_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sort_creation_date"
                    android:textColor="#000"
                    android:textSize="16sp" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/order_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ascending_or_descending_order"
                    android:textColor="#000"
                    android:textSize="16sp" />


                <RadioButton
                    android:id="@+id/order_asc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/order_ACS"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/order_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/order_DECS"
                    android:textColor="#000"
                    android:textSize="16sp" />

            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/apply" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>